--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,48 @@
-.App {
+.header{
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.total{
+  text-align: center;
+  /* border: 2px solid; */
+  border-radius: 20px;
+  width:300px;
+  padding: 40px;
+  margin-left: 30px;
+margin-top: 10px;
+background-color: #EAF2D7;
+box-shadow: 6px -3px 36px -3px rgba(0,0,0,0.75);
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+p{
+text-shadow: -2px 2px 3px rgba(40, 0, 0, 0.75);
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App{
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  background-color: #A8DADC;
+  height: 100vh;
+}
+.container{
+ background-color: #CBBAED;
+ width: 450px;
+ padding: 50px;
+ border-radius: 30px;
+ height: 500px;
+ margin-top: 70px;
+}
+.input{
   display: flex;
   flex-direction: column;
-  align-items: center;
+  padding: 20px;
+  /* justify-content: space-around; */
+}
+.button{
+  text-align: center;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+  justify-content: space-evenly;
 
-.App-link {
-  color: #61dafb;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+/* #filled-basic{
+ /* margin-top: 20px; */
+ 
